--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
 	<input type="password" id="password"placeholder="Password"required>
 	<label for="portfolio" >Portfolio URL</label>
 	<input type="url" id="portfolio" placeholder="URL Input">
-	<button type="button" >Submit</button>
+	<button type="submit" >Submit</button>
   	
     <script type="text/javascript" src="./script.js">
    
